--- a/template_team_results_2025_cz.html
+++ b/template_team_results_2025_cz.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Velikonoce 2025 - 24 hodin OB štafety</title>
-	<meta name="description" content="Results of 2023 24 hodin OB štafety">
+    <title>24 hodin OB štafety 2025</title>
+	<meta name="description" content="Results of 2025 24 hodin OB štafety">
 	<meta name="author" content="fspraha.cz">
 
 	<link rel="icon" href="favicon.ico">
@@ -33,7 +33,7 @@
 		<div class="uk-container uk-container-expand">
 		<nav class="uk-navbar" id="navbar" data-uk-navbar>
 			<div class="uk-navbar-left">
-			<a class="uk-navbar-item uk-logo" href="/" style="color: #fff;font-family: Verdana, Geneva, Tahoma, sans-serif;">Zakončení 2024 - 24 hodin OB štafety</a>
+			<a class="uk-navbar-item uk-logo" href="/" style="color: #fff;font-family: Verdana, Geneva, Tahoma, sans-serif;">24 hodin OB štafety 2025</a>
 			<span id="a"></span>
 			</div>
 			
@@ -48,7 +48,7 @@
 
       <footer class="uk-section uk-section-small uk-text-center">
         <hr>
-        <p class="uk-text-small uk-text-center">© 2023 <a href="http://fspraha.cz">VŠTJ Stavební fakulta Praha - Oddíl OB</a>, Fenri </p>
+        <p class="uk-text-small uk-text-center">© 2025 <a href="http://fspraha.cz">VŠTJ Stavební fakulta Praha - Oddíl OB</a>, Fenri </p>
       </footer>
     </div>
 	</div>      
